--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,9 @@
 </head>
 <body>
     <h1>
-        Meatballs
+        Contact
     </h1>
-    ...haha balls:P
-    <br/>
-    <a href="contact.html">
-        Contact me
-    </a>
 
+    
 </body>
 </html>
